markdown/ai/2.0.0/_index.md
# ai 2.0.0

115 pages, converted from upstream Spring AsciiDoc.

- [api/advisors-recursive](./api/advisors-recursive.md)
- [api/advisors](./api/advisors.md)
- [api/aimetadata](./api/aimetadata.md)
- [api/audio](./api/audio.md)
- [api/audio/speech](./api/audio/speech.md)
- [api/audio/speech/elevenlabs-speech](./api/audio/speech/elevenlabs-speech.md)
- [api/audio/speech/openai-speech](./api/audio/speech/openai-speech.md)
- [api/audio/transcriptions](./api/audio/transcriptions.md)
- [api/audio/transcriptions/azure-openai-transcriptions](./api/audio/transcriptions/azure-openai-transcriptions.md)
- [api/audio/transcriptions/openai-transcriptions](./api/audio/transcriptions/openai-transcriptions.md)
- [api/bedrock-chat](./api/bedrock-chat.md)
- [api/bedrock](./api/bedrock.md)
- [api/chat-memory](./api/chat-memory.md)
- [api/chat/anthropic-chat](./api/chat/anthropic-chat.md)
- [api/chat/anthropic-migration](./api/chat/anthropic-migration.md)
- [api/chat/azure-openai-chat](./api/chat/azure-openai-chat.md)
- [api/chat/bedrock-converse](./api/chat/bedrock-converse.md)
- [api/chat/comparison](./api/chat/comparison.md)
- [api/chat/deepseek-chat](./api/chat/deepseek-chat.md)
- [api/chat/dmr-chat](./api/chat/dmr-chat.md)
- [api/chat/google-genai-chat](./api/chat/google-genai-chat.md)
- [api/chat/groq-chat](./api/chat/groq-chat.md)
- [api/chat/minimax-chat](./api/chat/minimax-chat.md)
- [api/chat/mistralai-chat](./api/chat/mistralai-chat.md)
- [api/chat/nvidia-chat](./api/chat/nvidia-chat.md)
- [api/chat/oci-genai-chat](./api/chat/oci-genai-chat.md)
- [api/chat/ollama-chat](./api/chat/ollama-chat.md)
- [api/chat/openai-chat](./api/chat/openai-chat.md)
- [api/chat/perplexity-chat](./api/chat/perplexity-chat.md)
- [api/chat/prompt-engineering-patterns](./api/chat/prompt-engineering-patterns.md)
- [api/chatclient](./api/chatclient.md)
- [api/chatmodel](./api/chatmodel.md)
- [api/docker-compose](./api/docker-compose.md)
- [api/effective-agents](./api/effective-agents.md)
- [api/embeddings](./api/embeddings.md)
- [api/embeddings/azure-openai-embeddings](./api/embeddings/azure-openai-embeddings.md)
- [api/embeddings/bedrock-cohere-embedding](./api/embeddings/bedrock-cohere-embedding.md)
- [api/embeddings/bedrock-titan-embedding](./api/embeddings/bedrock-titan-embedding.md)
- [api/embeddings/google-genai-embeddings-text](./api/embeddings/google-genai-embeddings-text.md)
- [api/embeddings/mistralai-embeddings](./api/embeddings/mistralai-embeddings.md)
- [api/embeddings/oci-genai-embeddings](./api/embeddings/oci-genai-embeddings.md)
- [api/embeddings/ollama-embeddings](./api/embeddings/ollama-embeddings.md)
- [api/embeddings/onnx](./api/embeddings/onnx.md)
- [api/embeddings/openai-embeddings](./api/embeddings/openai-embeddings.md)
- [api/embeddings/postgresml-embeddings](./api/embeddings/postgresml-embeddings.md)
- [api/embeddings/vertexai-embeddings-multimodal](./api/embeddings/vertexai-embeddings-multimodal.md)
- [api/embeddings/vertexai-embeddings-text](./api/embeddings/vertexai-embeddings-text.md)
- [api/etl-pipeline](./api/etl-pipeline.md)
- [api/generic-model](./api/generic-model.md)
- [api/image/azure-openai-image](./api/image/azure-openai-image.md)
- [api/image/openai-image](./api/image/openai-image.md)
- [api/image/stabilityai-image](./api/image/stabilityai-image.md)
- [api/imageclient](./api/imageclient.md)
- [api/index](./api/index.md)
- [api/mcp/mcp-annotations-client](./api/mcp/mcp-annotations-client.md)
- [api/mcp/mcp-annotations-examples](./api/mcp/mcp-annotations-examples.md)
- [api/mcp/mcp-annotations-overview](./api/mcp/mcp-annotations-overview.md)
- [api/mcp/mcp-annotations-server](./api/mcp/mcp-annotations-server.md)
- [api/mcp/mcp-annotations-special-params](./api/mcp/mcp-annotations-special-params.md)
- [api/mcp/mcp-client-boot-starter-docs](./api/mcp/mcp-client-boot-starter-docs.md)
- [api/mcp/mcp-helpers](./api/mcp/mcp-helpers.md)
- [api/mcp/mcp-overview](./api/mcp/mcp-overview.md)
- [api/mcp/mcp-security](./api/mcp/mcp-security.md)
- [api/mcp/mcp-server-boot-starter-docs](./api/mcp/mcp-server-boot-starter-docs.md)
- [api/mcp/mcp-stateless-server-boot-starter-docs](./api/mcp/mcp-stateless-server-boot-starter-docs.md)
- [api/mcp/mcp-stdio-sse-server-boot-starter-docs](./api/mcp/mcp-stdio-sse-server-boot-starter-docs.md)
- [api/mcp/mcp-streamable-http-server-boot-starter-docs](./api/mcp/mcp-streamable-http-server-boot-starter-docs.md)
- [api/moderation](./api/moderation.md)
- [api/moderation/mistral-ai-moderation](./api/moderation/mistral-ai-moderation.md)
- [api/moderation/openai-moderation](./api/moderation/openai-moderation.md)
- [api/multimodality](./api/multimodality.md)
- [api/prompt](./api/prompt.md)
- [api/retrieval-augmented-generation](./api/retrieval-augmented-generation.md)
- [api/speech](./api/speech.md)
- [api/structured-output-converter](./api/structured-output-converter.md)
- [api/testcontainers](./api/testcontainers.md)
- [api/testing](./api/testing.md)
- [api/tools-migration](./api/tools-migration.md)
- [api/tools](./api/tools.md)
- [api/transcriptions](./api/transcriptions.md)
- [api/usage-handling](./api/usage-handling.md)
- [api/vectordbs](./api/vectordbs.md)
- [api/vectordbs/apache-cassandra](./api/vectordbs/apache-cassandra.md)
- [api/vectordbs/azure-cosmos-db](./api/vectordbs/azure-cosmos-db.md)
- [api/vectordbs/azure](./api/vectordbs/azure.md)
- [api/vectordbs/bedrock-knowledge-base](./api/vectordbs/bedrock-knowledge-base.md)
- [api/vectordbs/chroma](./api/vectordbs/chroma.md)
- [api/vectordbs/coherence](./api/vectordbs/coherence.md)
- [api/vectordbs/couchbase](./api/vectordbs/couchbase.md)
- [api/vectordbs/elasticsearch](./api/vectordbs/elasticsearch.md)
- [api/vectordbs/gemfire](./api/vectordbs/gemfire.md)
- [api/vectordbs/mariadb](./api/vectordbs/mariadb.md)
- [api/vectordbs/milvus](./api/vectordbs/milvus.md)
- [api/vectordbs/mongodb](./api/vectordbs/mongodb.md)
- [api/vectordbs/neo4j](./api/vectordbs/neo4j.md)
- [api/vectordbs/opensearch](./api/vectordbs/opensearch.md)
- [api/vectordbs/oracle](./api/vectordbs/oracle.md)
- [api/vectordbs/pgvector](./api/vectordbs/pgvector.md)
- [api/vectordbs/pinecone](./api/vectordbs/pinecone.md)
- [api/vectordbs/qdrant](./api/vectordbs/qdrant.md)
- [api/vectordbs/redis](./api/vectordbs/redis.md)
- [api/vectordbs/s3-vector-store](./api/vectordbs/s3-vector-store.md)
- [api/vectordbs/typesense](./api/vectordbs/typesense.md)
- [api/vectordbs/understand-vectordbs](./api/vectordbs/understand-vectordbs.md)
- [api/vectordbs/weaviate](./api/vectordbs/weaviate.md)
- [concepts](./concepts.md)
- [contribution-guidelines](./contribution-guidelines.md)
- [getting-started](./getting-started.md)
- [glossary](./glossary.md)
- [guides/dynamic-tool-search](./guides/dynamic-tool-search.md)
- [guides/getting-started-mcp](./guides/getting-started-mcp.md)
- [guides/llm-as-judge](./guides/llm-as-judge.md)
- [index](./index.md)
- [observability/index](./observability/index.md)
- [upgrade-notes](./upgrade-notes.md)
